add bug lifecycle
