# backend/api/bug/handler.go
@@ -33,10 +33,11 @@ func (handler *Handler) Routes() *chi.Mux {
 		r.Get("/{bug-id}", handler.get)
 		r.Put("/", handler.update)
 		r.Delete("/{bug-id}", handler.delete)
-		r.Get("/by-profile", handler.getByProfile)
+		r.Get("/by-assigned", handler.getByAssigned)
 		r.Get("/organisations", handler.getOrganisations)
 		r.Get("/organisation/{organisation-id}/teams", handler.getOrganisationTeams)
 		r.Get("/organisation/{organisation-id}/teams-by-profile", handler.getOrganisationTeamsByProfile)
+		r.Get("/by-assignee-team/{team-id}", handler.getByAssigneeTeam)
 	})
 
 	return router
